log/build_2022-03-10_22-54-55/py_package/stderr.log
  File "/home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package/controller.py", line 21
    self.get_logger().info('I heard: "%s","%s"' % msg.x, %msg.y)
                                                         ^
SyntaxError: invalid syntax

